--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,18 @@
 
 <head>
   <meta charset="utf-8" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap'"
+    rel="stylesheet">
+  <style>
+    * {
+      font-family: "Open Sans", sans-serif;
+      font-optical-sizing: auto;
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+  </style>
   <title>Ev-CPMS</title>
 </head>
 
