--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,17 @@
 <head>
   <meta charset="utf-8" />
   <meta name="description" content="Web site created using create-react-app" />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --primary-color: #003366; /* Navy Blue */
+      --secondary-color: #6a5acd; /* Light Slate Blue */
+      --hover-color: #002244; /* Dark Navy Blue */
+      --icon-text-hover-color: #483d8b; /* Dark Slate Blue */
+      --border-color: rgb(230, 227, 227); /* Light Gray */
+      --sidebar-bg-gradient: linear-gradient(rgba(106, 90, 205, 0.4), rgba(106, 90, 205, 0.4)); /* Soft Light Slate Blue Gradient */
+    }
+
     * {
       font-family: "Open Sans", sans-serif;
       font-optical-sizing: auto;
