--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
       --hover-color: #002244; /* Dark Navy Blue */
       --icon-text-hover-color: #483d8b; /* Dark Slate Blue */
       --border-color: rgb(230, 227, 227); /* Light Gray */
+      --inputBackground: #f6eedf; /* Light Beige for input background */
       --sidebar-bg-gradient: linear-gradient(rgba(106, 90, 205, 0.4), rgba(106, 90, 205, 0.4)); /* Soft Light Slate Blue Gradient */
     }
 
